fix: z-index of nav

--- a/Components/Navbar/navbar.css
+++ b/Components/Navbar/navbar.css
@@ -6,7 +6,7 @@ nav{
     align-items:center;
     padding: 1rem 8rem 0rem;
     position: fixed;
-    z-index: 1;
+    z-index: 999;
     top: 0;
     left: 0;
     right: 0;
